# highenergy

./: .plots.C.swp  Bottom.SLDPRT  Front.SLDPRT  GraphResolution_brandon.C  INSTALL.txt  Plots.C  README.md  README.txt  Scintillator.SLDPRT  Tube Bracket.SLDPRT  myScript.C  read_binary.C  read_binary_C_ACLiC_dict_rdict.pcm  run_2fibers_29_5_ch3_tr_10mv_cs137_10cm.root
HEPPDAP/: LICENSE  README.md
HEPPDAP/code/: setup.py  updaterecipe.txt
HEPPDAP/code/heppdap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
SolidWorks/: Bottom (1-17-19).SLDPRT  Long Plastic Adapter.SLDPRT  Long Plastic Adapter.STL  Small Bottom (Fifth Try).SLDPRT  newsipmfiber.SLDPRT  newsipmfiber.STL
SolidWorks/fall2019/: bottom.SLDPRT  bottom.STL  fiberplate.SLDDRW  fiberplate.SLDPRT  fiberplate.STL  fibertube.SLDPRT  fibertube.STL  top(9-12-19).SLDPRT  top.SLDPRT  top.STL
SolidWorks/fall2020/: Bottom_filtered.SLDPRT  Bottom_filtered.STL  Bottom_newboard.SLDPRT  Bottom_newboard.STL
SolidWorks/spring2020/: Bottom.SLDPRT  Bottom.STL  Tube Bracket.STL  structure.SLDASM
c_code/: decode.C  plots.C  read_binary.C  unnamed.C
code/: example.C  plots.C  read_binary.C  read_binary_C_ACLiC_dict_rdict.pcm
datfiles/: Run_Light_29_5V_5mV_10mV_4_2mm_Fibers.root  dat.txt
datfiles/radationstudies/: run_light_pmt_cs137_8in.root
gui/: LICENSE  README.md  setup.py
gui/gui_pkg/: .event_classes.py.swp  .read_data.py.swp  .temp.txt.swp  app.py  app.py.copyforlongchannels  event_classes.py  read_data.py  stats.py
gui/gui_pkg_bweindorf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
root-6.10.04/fonts/: .DroidSansFallback.ttf.icloud
root-6.10.04/root/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  RGitCommit.h.tmp  ROOTConfig-targets.cmake  ROOTConfig-version.cmake  ROOTConfig.cmake  ROOTUseFile.cmake  cmake_install.cmake  compile_commands.json  recmake_initial.sh
root-6.10.04/root/math/unuran/unuran-1.8.0-root/: INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  UPGRADE  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/: Makefile  Makefile.am  Makefile.in  unuran_config.h
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/distr/: Makefile  Makefile.am  deprecated_distr.c
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/distributions/: Makefile  Makefile.am
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/methods/: Makefile  Makefile.am  deprecated_methods.c  deprecated_vmt.c
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/parser/: Makefile  Makefile.am  make_stringparser.pl
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/specfunct/: Makefile  Makefile.am
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/tests/: Makefile  Makefile.am
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/uniform/: Makefile  Makefile.am  fish.c  mrg31k3p.c  mstd.c  urng_builtin.c  urng_fvoid.c  urng_gsl.c  urng_gslqrng.c  urng_prng.c  urng_randomshift.c  urng_rngstreams.c
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/urng/: Makefile  Makefile.am
root-6.10.04/root/math/unuran/unuran-1.8.0-root/src/utils/: Makefile  Makefile.am
(+1111 files in other folders)
